--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
+# Dependencies
 node_modules/
+
+# Build outputs
+.next/
+out/
+dist/
+build/
+
+# Environment files (keep examples)
+.env
+.env.local
+.env.*.local
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Python
+__pycache__/
+*.py[cod]
+venv/
+.venv/
+
+# Database (local dev)
+*.db-journal
