--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,13 @@ jobs:
         run: npm install -g vercel
 
       - name: Pull Vercel Environment
+        working-directory: maven
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build Project
+        working-directory: maven
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy to Vercel
+        working-directory: maven
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
