--- a/maven/apps/dashboard/package.json
+++ b/maven/apps/dashboard/package.json
@@ -17,13 +17,15 @@
     "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.33.0",
     "jspdf": "^4.1.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-plaid-link": "^4.1.1",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
