--- a/maven/apps/dashboard/package.json
+++ b/maven/apps/dashboard/package.json
@@ -15,6 +15,7 @@
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@supabase/supabase-js": "^2.95.3",
+    "@upstash/redis": "^1.36.2",
     "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.33.0",
     "jspdf": "^4.1.0",
