--- a/maven/apps/dashboard/package.json
+++ b/maven/apps/dashboard/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.2.3",
     "react-plaid-link": "^4.1.1",
     "recharts": "^3.7.0",
+    "redis": "^5.10.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
